--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,22 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="HandheldFriendly" content="true">
-  <meta name="theme-color" content="#000000" />
+  <meta name="theme-color" content="#ffffff" />
   <meta name="description" content="Mobilna sauna na zamówienie" />
-  <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
-  <link rel="icon" href="/favicon.png" type="image/x-icon">
-  <title>React App</title>
+
+  <!-- favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+  <!-- <link rel="shortcut icon" href="/favicon-114x114.png" type="image/x-icon">
+    <link rel="icon" href="/favicon-114x114.png" type="image/x-icon"> -->
+
+
+  <title>Mobilne Saunowanie</title>
 </head>
 
 <body>
