--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- Gallery is created by Xiao Lin (https://github.com/xiaolin/react-image-gallery) and used on this page under MIT licence -->
+<html lang="pl">
 
 <head>
   <meta charset="utf-8" />
@@ -7,18 +8,32 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="HandheldFriendly" content="true">
   <meta name="theme-color" content="#ffffff" />
-  <meta name="description" content="Mobilna sauna na zamówienie" />
+  <meta name="description"
+    content="Wynajmij saunę z dojazdem na Twoje podwórko. Pozwól sobie na prawdziwy i zdrowy relaks z rodziną lub przyjaciółmi. Darmowy dowóz do Władysławowa i okolic." />
+  <!-- Open Graph protocol -->
+  <meta property="og:title" content="Mobilne Saunowanie | Sauna z dowozem do klienta">
+  <meta property="og:description"
+    content="Wynajmij saunę z dojazdem na Twoje podwórko. Pozwól sobie na prawdziwy i zdrowy relaks z rodziną lub przyjaciółmi. Darmowy dowóz do Władysławowa i okolic.">
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.mobilnesaunowanie.pl/" />
+  <meta property="og:image" content="https://www.mobilnesaunowanie.pl/static/media/gallery1.ae0508a5.jpg">
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4160QYSH67"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-4160QYSH67');
+  </script>
 
   <!-- favicon -->
-
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
-
-
-  <title>Mobilne Saunowanie</title>
+  <title>Mobilne Saunowanie | Sauna z dowozem do klienta</title>
 </head>
 
 <body>
-  <!-- Gallery is created by Xiao Lin (https://github.com/xiaolin/react-image-gallery) and used on this page under MIT licence -->
+
   <div id="root"></div>
 </body>
 
