--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
   <meta name="HandheldFriendly" content="true">
   <meta name="theme-color" content="#ffffff" />
   <meta name="description"
-    content="Wynajmij saunę z dojazdem na Twoje podwórko. Pozwól sobie na prawdziwy i zdrowy relaks z rodziną lub przyjaciółmi. Darmowy dowóz do Władysławowa i okolic." />
+    content="Wynajmij saunę z dojazdem na Twoje podwórko. Pozwól sobie na prawdziwy i zdrowy relaks z rodziną lub przyjaciółmi." />
   <!-- Open Graph protocol -->
   <meta property="og:title" content="Mobilne Saunowanie | Sauna z dowozem do klienta">
   <meta property="og:description"
-    content="Wynajmij saunę z dojazdem na Twoje podwórko. Pozwól sobie na prawdziwy i zdrowy relaks z rodziną lub przyjaciółmi. Darmowy dowóz do Władysławowa i okolic.">
+    content="Wynajmij saunę z dojazdem na Twoje podwórko. Pozwól sobie na prawdziwy i zdrowy relaks z rodziną lub przyjaciółmi.">
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.mobilnesaunowanie.pl/" />
   <meta property="og:image" content="https://www.mobilnesaunowanie.pl/static/media/gallery1.ae0508a5.jpg">
